# computer-stats-daemon

./: .cruft.json  .gitignore  AUTHORS.rst  PLANS.md  README.rst  pyproject.toml  tox.ini
.github/: CODEOWNERS
docs/: conf.py  index.rst
docs/_scripts/: generate_license_information.py
src/computer_stats_daemon/: __init__.py
src/computer_stats_daemon/core/: logic.py  utils.py
src/computer_stats_daemon/infrastructure/: system.py
src/computer_stats_daemon/presentation/: collector.py  dashboard.py  index.html  main.py  utils.py
tests/unit/: test_example.py
